<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:ignore="ExtraText">

    <!-- Campo de texto para inserir a quantidade de carros -->

    <ImageView
        android:id="@+id/myImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/pista"
        android:src="@drawable/rota2"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="0dp" />

    <!-- LinearLayout para os valores de tempo -->
    <LinearLayout
        android:id="@+id/timeValuesContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/myImageView">
        <!-- TextViews para os valores de tempo -->

        <TextView
            android:id="@+id/time1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/t1"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/time2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/t2"
            android:textStyle="bold"
            android:textSize="20sp" />

        <!-- Repita TextViews para os outros tempos (até 10) -->
        <TextView
            android:id="@+id/time3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/t3"
            android:textStyle="bold"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/time4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/t4"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/time5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/t5"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/time6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/t6"
            android:textStyle="bold"
            android:textSize="20sp"
            android:gravity="center" />

        <TextView
            android:id="@+id/time7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/t7"
            android:textSize="20sp"
            android:gravity="center" />

        <TextView
            android:id="@+id/time8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/t8"
            android:textSize="20sp"
            android:gravity="center" />

        <TextView
            android:id="@+id/time9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/t9"
            android:textStyle="bold"
            android:textSize="20sp"
            android:gravity="center" />

        <!-- Exemplo para os tempos adicionais -->
        <TextView
            android:id="@+id/time10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:textStyle="bold"
            android:text="@string/t10"
            android:textSize="20sp" />

    </LinearLayout>

    <Button
        android:id="@+id/botaoStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:backgroundTint="@color/verde"
        android:text="Start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeValuesContainer"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>